styles/global/_root.scss
html {
  background: #0b0911;
}

body {
  background: #1B172D;
  font-family: Poppins;
  font-size: 12px;
  line-height: 18px;
  color: #FFF;
  max-width: 1366px;
  min-height: 100vh;
  margin: auto;
}

footer {
  background-color: #231E3A;
  padding: 28px 100px;
}

